# saucedemo_yu

./: .gitignore  conf.py  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: action.yml
100/export/: influxDbData.txt
100/history/: retry-trend.json
100/widgets/: executors.json  history-trend.json
101/export/: influxDbData.txt
101/history/: history-trend.json  retry-trend.json
101/widgets/: duration-trend.json  executors.json
102/export/: influxDbData.txt
102/history/: duration-trend.json
102/widgets/: executors.json  history-trend.json  retry-trend.json
103/export/: influxDbData.txt
103/history/: retry-trend.json
103/widgets/: categories-trend.json  executors.json  history-trend.json
104/export/: influxDbData.txt
104/widgets/: executors.json  history-trend.json  retry-trend.json
105/export/: influxDbData.txt
105/history/: retry-trend.json
105/widgets/: categories-trend.json  executors.json  history-trend.json
106/export/: influxDbData.txt
106/history/: retry-trend.json
106/widgets/: duration-trend.json  executors.json  history-trend.json
allure-results/: 175be991-5421-45dd-bf66-63ec7b4f0723-attachment.txt  375211ad-d4e7-4d93-a2de-8362402d7c87-result.json  3ebe465a-1c27-4de4-bc59-02d928049703-result.json  c55e6dda-dfb4-408a-91c1-e9c724b12c40-result.json  e0bb78cf-60bd-4709-a889-1a50ba96f8da-result.json
core/: base.py
last-history/: duration-trend.json
pages/: page_headless.py
tests/: test_allure.py  test_check.py  test_headless.py  test_login_page.py  test_login_page_v1.py  test_search.py
(+371 files in other folders)
