[tool.poetry]
name = "saucedemo-yu"
version = "0.1.0"
description = ""
authors = ["Yuriyvas <yuriy.vassiliev2010@gmail.com>"]
readme = "README.md"
packages = [{include = "saucedemo_yu"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
